test/testdata/string/not_indexable_error.lox
"foo"[0]; // error: 'string' value is not indexable
